force-app/main/default/objects/Account/fields/CS_Tier_Override__c.field-meta.xml
<CustomField>
    <fullName>CS_Tier_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CS Tier Override</label>
    <type>Checkbox</type>
</CustomField>