force-app/main/default/objects/Account/fields/CSM__c.field-meta.xml
<CustomField>
    <fullName>CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the CSM of the Account. Populated by Lane 4.</description>
    <label>Implementation Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>