force-app/main/default/objects/Account/fields/CSM_Director_Email__c.field-meta.xml
<CustomField>
    <fullName>CSM_Director_Email__c</fullName>
    <label>CSM Director Email</label>
    <type>Email</type>
</CustomField>