force-app/main/default/objects/Account/fields/CSM_First_30d_Stage__c.field-meta.xml
<CustomField>
    <fullName>CSM_First_30d_Stage__c</fullName>
    <label>CSM First 30d Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Intro</fullName>
            </value>
            <value>
                <fullName>Pending Delivery</fullName>
            </value>
            <value>
                <fullName>Attempting Training</fullName>
            </value>
            <value>
                <fullName>Scheduled Training</fullName>
            </value>
            <value>
                <fullName>Health Check</fullName>
            </value>
            <value>
                <fullName>Scheduled Additional Training</fullName>
            </value>
            <value>
                <fullName>Additional followup needed</fullName>
            </value>
            <value>
                <fullName>Initial onboarding completed</fullName>
            </value>
            <value>
                <fullName>Cannot_connect</fullName>
                <label>Cannot connect</label>
            </value>
            <value>
                <fullName>----Mid Market Fields----</fullName>
            </value>
            <value>
                <fullName>MM Internal Planning</fullName>
            </value>
            <value>
                <fullName>MM Attempting Kickoff</fullName>
            </value>
            <value>
                <fullName>MM Scheduled Kickoff</fullName>
            </value>
            <value>
                <fullName>Attempting_1st_session</fullName>
                <label>Attempting 1st session</label>
            </value>
            <value>
                <fullName>Scheduled_1st_session</fullName>
                <label>Scheduled 1st session</label>
            </value>
            <value>
                <fullName>Attempting_2nd_session</fullName>
                <label>Attempting 2nd session</label>
            </value>
            <value>
                <fullName>Scheduled_2nd_session</fullName>
                <label>Scheduled 2nd session</label>
            </value>
            <value>
                <fullName>Attempting 3rd session</fullName>
            </value>
            <value>
                <fullName>Scheduled 3rd session</fullName>
            </value>
            <value>
                <fullName>MM Attempting Additional Training</fullName>
            </value>
            <value>
                <fullName>MM Scheduled Additional Training</fullName>
            </value>
            <value>
                <fullName>MM Trainings Complete - Continuing Regular Check-Ins</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Completed_1st_session</fullName>
                <isActive>false</isActive>
                <label>Completed 1st session</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>