force-app/main/default/objects/Account/fields/CSM_Health_Check_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>CSM_Health_Check_Timestamp__c</fullName>
    <description>Replacing antiquated fields to timestamp CSM activity</description>
    <label>CSM Health Check Timestamp</label>
    <type>DateTime</type>
</CustomField>