force-app/main/default/objects/Account/fields/CSM_Health_Rating__c.field-meta.xml
<CustomField>
    <fullName>CSM_Health_Rating__c</fullName>
    <description>1-5 score that reflects the CSM&apos;s opinion of how well onboarding is going</description>
    <label>CS Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
                <color>#A53711</color>
                <label>Red</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
                <color>#F3D904</color>
                <label>Yellow</label>
            </value>
            <value>
                <fullName>Green</fullName>
                <color>#78C953</color>
                <label>Green</label>
            </value>
            <value>
                <fullName>--</fullName>
                <isActive>false</isActive>
                <label>--</label>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
            <value>
                <fullName>5</fullName>
                <isActive>false</isActive>
                <label>5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>