force-app/main/default/objects/Account/fields/CSM_Health_Trend__c.field-meta.xml
<CustomField>
    <fullName>CSM_Health_Trend__c</fullName>
    <description>Customer Success</description>
    <inlineHelpText>The Field Label has been changed form &quot;CS Health Trend&quot; to &quot;CS Sentiment Trend&quot; as per the request of Cs team Jira- GTMS-2302</inlineHelpText>
    <label>CS Sentiment Trend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Declining</fullName>
            </value>
            <value>
                <fullName>Improving</fullName>
            </value>
            <value>
                <fullName>Steady</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>