force-app/main/default/objects/Account/fields/CSM_Initial_onboarding_completed_Time__c.field-meta.xml
<CustomField>
    <fullName>CSM_Initial_onboarding_completed_Time__c</fullName>
    <label>CSM Initial onboarding completed Time</label>
    <type>DateTime</type>
</CustomField>