force-app/main/default/objects/Account/fields/CSM_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>CSM_Manager_Email__c</fullName>
    <description>CSM Manager Email populated by workflow</description>
    <label>CSM Manager Email</label>
    <type>Email</type>
</CustomField>