force-app/main/default/objects/Account/fields/CSM_Name_Copy__c.field-meta.xml
<CustomField>
    <fullName>CSM_Name_Copy__c</fullName>
    <label>CSM Name Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>