force-app/main/default/objects/Account/fields/CSM_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>CSM_Owner_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSM Owner Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>