force-app/main/default/objects/Account/fields/CSM_Scheduled_Add_Training_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>CSM_Scheduled_Add_Training_Timestamp__c</fullName>
    <description>Replacing antiquated fields to timestamp CSM activity</description>
    <label>CSM Scheduled Add Training Timestamp</label>
    <type>DateTime</type>
</CustomField>