force-app/main/default/objects/Account/fields/CSM_Status__c.field-meta.xml
<CustomField>
    <fullName>CSM_Status__c</fullName>
    <label>CS Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Pre-Sale</fullName>
            </value>
            <value>
                <fullName>Adoption</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Out Of Business</fullName>
            </value>
            <value>
                <fullName>Pilot</fullName>
                <isActive>false</isActive>
                <label>Pilot</label>
            </value>
            <value>
                <fullName>Preparation</fullName>
                <isActive>false</isActive>
                <label>Preparation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>