force-app/main/default/objects/Account/fields/CSM_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>CSM_Sub_Status__c</fullName>
    <label>CSM Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Planning</fullName>
            </value>
            <value>
                <fullName>On-Hold</fullName>
            </value>
            <value>
                <fullName>Attempting Kick-off</fullName>
            </value>
            <value>
                <fullName>Scheduled Kick off</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Project Planning</fullName>
            </value>
            <value>
                <fullName>Installations and Training</fullName>
            </value>
            <value>
                <fullName>Go-Live</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Steady State</fullName>
            </value>
            <value>
                <fullName>Technical Issues</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Health Check</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Delinquency</fullName>
            </value>
            <value>
                <fullName>Onboarding Complete</fullName>
            </value>
            <value>
                <fullName>Attempting Training</fullName>
                <isActive>false</isActive>
                <label>Attempting Training</label>
            </value>
            <value>
                <fullName>Scheduled Training</fullName>
                <isActive>false</isActive>
                <label>Scheduled Training</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>