force-app/main/default/objects/Account/fields/CSM_who_completed_onboarding__c.field-meta.xml
<CustomField>
    <fullName>CSM_who_completed_onboarding__c</fullName>
    <description>CSM who completed onboarding stamped by a workflow: https://samsara.my.salesforce.com/01Q1P000000btfI</description>
    <label>CSM who completed onboarding</label>
    <type>TextArea</type>
</CustomField>