force-app/main/default/objects/Account/fields/Current_Monthly_Payments__c.field-meta.xml
<CustomField>
    <fullName>Current_Monthly_Payments__c</fullName>
    <inlineHelpText>Total monthly cost of all closed won opportunity licenses.</inlineHelpText>
    <label>Current Monthly Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>