force-app/main/default/objects/Account/fields/Current_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Current_Owner_Email__c</fullName>
    <label>Current Owner Email</label>
    <type>Email</type>
</CustomField>