force-app/main/default/objects/Account/fields/Current_Telematics_Provider__c.field-meta.xml
<CustomField>
    <fullName>Current_Telematics_Provider__c</fullName>
    <label>Current Telematics Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Azuga</fullName>
            </value>
            <value>
                <fullName>BigRoad</fullName>
            </value>
            <value>
                <fullName>blackberry</fullName>
            </value>
            <value>
                <fullName>Causeway</fullName>
            </value>
            <value>
                <fullName>Coretex</fullName>
            </value>
            <value>
                <fullName>C Track (Inseego)</fullName>
            </value>
            <value>
                <fullName>EagleEye</fullName>
            </value>
            <value>
                <fullName>E-Roads</fullName>
            </value>
            <value>
                <fullName>Fleetboard</fullName>
            </value>
            <value>
                <fullName>FleetComplete/BigRoad</fullName>
            </value>
            <value>
                <fullName>Fleetio</fullName>
            </value>
            <value>
                <fullName>Fleetmatics</fullName>
            </value>
            <value>
                <fullName>Geotab</fullName>
            </value>
            <value>
                <fullName>GPS Insight</fullName>
            </value>
            <value>
                <fullName>GPS Insights</fullName>
                <isActive>false</isActive>
                <label>GPS Insights</label>
            </value>
            <value>
                <fullName>GreenRoad</fullName>
            </value>
            <value>
                <fullName>ISAAC Instruments</fullName>
            </value>
            <value>
                <fullName>Isotrack</fullName>
            </value>
            <value>
                <fullName>JJ Keller</fullName>
            </value>
            <value>
                <fullName>KeepTruckin</fullName>
                <isActive>false</isActive>
                <label>KeepTruckin</label>
            </value>
            <value>
                <fullName>Lytx</fullName>
            </value>
            <value>
                <fullName>Masternaut</fullName>
            </value>
            <value>
                <fullName>Microlise</fullName>
            </value>
            <value>
                <fullName>Motive</fullName>
            </value>
            <value>
                <fullName>Movolytics</fullName>
            </value>
            <value>
                <fullName>NetworkFleet</fullName>
            </value>
            <value>
                <fullName>NIBC</fullName>
            </value>
            <value>
                <fullName>No Provider</fullName>
            </value>
            <value>
                <fullName>Omnitracs</fullName>
            </value>
            <value>
                <fullName>Omnitracs IVG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>