force-app/main/default/objects/Account/fields/Custom_Active_Hardware_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Custom_Active_Hardware_Calculation__c</fullName>
    <description>GTMS-1324</description>
    <formula>IF( 
Total_Purchased_VG_Count__c &gt; 0, 
IF( 
VGs_Active__c &gt; Total_Purchased_VG_Count__c, 
(VGs_Active__c +CMs_Active__c + AGs_Active__c) / (VGs_Active__c + Total_Purchased_CM_Count__c + Total_Purchased_AG_Count__c), 
IF( 
AND( 
(Total_Purchased_VG_Count__c + Total_Purchased_CM_Count__c + Total_Purchased_AG_Count__c)!=0, 
OR(NOT(ISNULL(VGs_Active__c)),NOT(ISNULL(CMs_Active__c)),NOT(ISNULL(AGs_Active__c))) 
), 
(VGs_Active__c +CMs_Active__c + AGs_Active__c) / (Total_Purchased_VG_Count__c + Total_Purchased_CM_Count__c + Total_Purchased_AG_Count__c),NULL 
)), 
IF( 
AND( 
( Total_Purchased_CM_Count__c + Total_Purchased_AG_Count__c)!=0, 
OR(NOT(ISNULL(VGs_Active__c)),NOT(ISNULL(CMs_Active__c))) 
), 
(CMs_Active__c + AGs_Active__c) / (Total_Purchased_CM_Count__c + Total_Purchased_AG_Count__c),NULL 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Active Hardware Calculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>