force-app/main/default/objects/Account/fields/Customer_ARR__c.field-meta.xml
<CustomField>
    <fullName>Customer_ARR__c</fullName>
    <description>Active ACV shows daily changes to annual license revenue via opportunity license start/end date</description>
    <inlineHelpText>Active ACV shows daily changes to annual license revenue via opportunity license start/end date</inlineHelpText>
    <label>Active ACV [USD]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>