force-app/main/default/objects/Account/fields/Customer_ARR_Netsuite__c.field-meta.xml
<CustomField>
    <fullName>Customer_ARR_Netsuite__c</fullName>
    <label>Customer ARR (Netsuite)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>