force-app/main/default/objects/Account/fields/Customer_require_PO_for_invoicing__c.field-meta.xml
<CustomField>
    <fullName>Customer_require_PO_for_invoicing__c</fullName>
    <description>GTMS-16585 Field added as part of the Deal Capture Accuracy project</description>
    <label>Customer require a PO for invoicing?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>