force-app/main/default/objects/Account/fields/Dashboard_Weekly_Active_Users__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Weekly_Active_Users__c</fullName>
    <description>Number of active users that the company has. Active is defined by a minimum of 5 events performed in the last 7 days. Mixpanel tracks the data.</description>
    <label>Dashboard Weekly Active Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>