force-app/main/default/objects/Account/fields/Date_Banner_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Banner_Approved__c</fullName>
    <label>Date Banner Approved</label>
    <type>Date</type>
</CustomField>