force-app/main/default/objects/Account/fields/Days_from_Account_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_from_Account_Assignment_Date__c</fullName>
    <formula>Today()- DATEVALUE(Account_Assignment_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days from Account Assignment Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>