force-app/main/default/objects/Account/fields/days_till_deactivation__c.field-meta.xml
<CustomField>
    <fullName>days_till_deactivation__c</fullName>
    <formula>IF(ISBLANK(Quarantine_Enabled_At__c), NULL, Quarantine_Enabled_At__c-TODAY())</formula>
    <label>Days Till Deactivation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>