force-app/main/default/objects/Account/fields/Deactivation_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Deactivation_Approval_Status__c</fullName>
    <label>Deactivation Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Manager/Director Approval</fullName>
            </value>
            <value>
                <fullName>Pending Director Final Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>