force-app/main/default/objects/Account/fields/DelightedInc__NPS__c.field-meta.xml
<CustomField>
    <fullName>DelightedInc__NPS__c</fullName>
    <label>Delighted NPS</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>