force-app/main/default/objects/Account/fields/DelightedInc__Passives__c.field-meta.xml
<CustomField>
    <fullName>DelightedInc__Passives__c</fullName>
    <label>Delighted Passives</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>