force-app/main/default/objects/Account/fields/Delinquency_Deactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Deactivation_Date__c</fullName>
    <label>Delinquency Deactivation Date</label>
    <type>Date</type>
</CustomField>