force-app/main/default/objects/Account/fields/Delinquency_Status__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Status__c</fullName>
    <description>GTMS-2843</description>
    <inlineHelpText>Delinquency Status
Orders Blocked: You will not be able to submit your quote for discount approval until the delinquency is resolved
Quotes Approved: You will NOT be able to create a quote document for your customer or generate a checkout link.</inlineHelpText>
    <label>Delinquency Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Orders Blocked</fullName>
            </value>
            <value>
                <fullName>Quotes Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>