force-app/main/default/objects/Account/fields/Delinquency_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Threshold__c</fullName>
    <description>GTMS-2843</description>
    <formula>IF(
   AND(
       Delinquent__c,
       Overdue_Balance__c &gt; 0,
       Customer_ARR__c &gt; 0,
       TEXT(CurrencyIsoCode) != null
   ),
   (Overdue_Balance__c / (Customer_ARR__c * CURRENCYRATE(TEXT(CurrencyIsoCode)))),
   0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delinquency Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>