force-app/main/default/objects/Account/fields/Delinquent_As_Of__c.field-meta.xml
<CustomField>
    <fullName>Delinquent_As_Of__c</fullName>
    <label>Delinquent As Of</label>
    <type>DateTime</type>
</CustomField>