force-app/main/default/objects/Account/fields/Delinquent_Case_Created__c.field-meta.xml
<CustomField>
    <fullName>Delinquent_Case_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delinquent Case Created</label>
    <type>Checkbox</type>
</CustomField>