force-app/main/default/objects/Account/fields/Did_they_Trial__c.field-meta.xml
<CustomField>
    <fullName>Did_they_Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A box to allow an AE to inform the future CSM if the customer completed  a trial before purchase</description>
    <inlineHelpText>Check for YES - AE to inform the future CSM if the customer completed a trial before purchase. This is a huge one because it allows us to know if the customer has had any training within the dashboard and using the devices</inlineHelpText>
    <label>Did they Trial?</label>
    <type>Checkbox</type>
</CustomField>