force-app/main/default/objects/Account/fields/DNB_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>DNB_Business_Name__c</fullName>
    <formula>DNBConnect__D_B_Connect_Company_Profile__r.DNBConnect__PrimName__c</formula>
    <label>DNB Business Name</label>
    <type>Text</type>
</CustomField>