force-app/main/default/objects/Account/fields/DNBI_Commercial_Credit_Percentage__c.field-meta.xml
<CustomField>
    <fullName>DNBI_Commercial_Credit_Percentage__c</fullName>
    <label>D&amp;B Commercial Credit Percentile</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>