force-app/main/default/objects/Account/fields/DNBI_Data_Available__c.field-meta.xml
<CustomField>
    <fullName>DNBI_Data_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>D&amp;B Data Available</label>
    <type>Checkbox</type>
</CustomField>