force-app/main/default/objects/Account/fields/DNBI_Financial_Stress_Score__c.field-meta.xml
<CustomField>
    <fullName>DNBI_Financial_Stress_Score__c</fullName>
    <label>D&amp;B Financial Stress Score Percentile</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>