force-app/main/default/objects/Account/fields/DNBI_PAYDEX__c.field-meta.xml
<CustomField>
    <fullName>DNBI_PAYDEX__c</fullName>
    <label>D&amp;B PAYDEX</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>