force-app/main/default/objects/Account/fields/DNBI_Recommended_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>DNBI_Recommended_Credit_Limit__c</fullName>
    <label>D&amp;B Recommended Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>