force-app/main/default/objects/Account/fields/DNBI_SlowNegExpCount__c.field-meta.xml
<CustomField>
    <fullName>DNBI_SlowNegExpCount__c</fullName>
    <label>D&amp;B Slow/Negative Experience Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>