force-app/main/default/objects/Account/fields/DNBI_Trade_Experiences_Count__c.field-meta.xml
<CustomField>
    <fullName>DNBI_Trade_Experiences_Count__c</fullName>
    <label>D&amp;B Trade Experiences Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>