force-app/main/default/objects/Account/fields/Does_the_customer_have_e_invoicing_req__c.field-meta.xml
<CustomField>
    <fullName>Does_the_customer_have_e_invoicing_req__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GTMS-16585 Field added as part of the Deal Capture Accuracy project</description>
    <label>Does the customer have e-invoicing req?</label>
    <type>Checkbox</type>
</CustomField>