force-app/main/default/objects/Account/fields/Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>Domain_Name__c</fullName>
    <description>Saves the domain, considering first the name after the email and then the website.</description>
    <label>Domain Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>