force-app/main/default/objects/Account/fields/ELD_Violations__c.field-meta.xml
<CustomField>
    <fullName>ELD_Violations__c</fullName>
    <label>ELD Violations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>