force-app/main/default/objects/Account/fields/Enable_Delinquency_Process__c.field-meta.xml
<CustomField>
    <fullName>Enable_Delinquency_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Deactivation Process</label>
    <type>Checkbox</type>
</CustomField>